--- a/references.bib
+++ b/references.bib
@@ -44,7 +44,7 @@
 @inproceedings{LittIDCC,
 	Abstract  = {Scientific workflows are typically used to automate the processing, analysis, and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly-available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
 	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
-	Journal   = {7th International Digital Curation Conference Proceedings},
+	booktitle   = {7th International Digital Curation Conference Proceedings},
 	Month     = {December},
 	Title     = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
 	Year      = {2011}
