--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,4 +2,10 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-Here I will conclude with some closing remarks.
+In this thesis, I have endeavoured to show the state of low resource languages, first defining them and then looking at different metrics for judging language vitality, both on the web and offline. I've looked at what language resources are, who makes them, how they are used, and what resources are needed for low resource languages to take them from purely spoken languages to well-resourced, thriving languages with a rich ecosystem of code surrounding them. I have described what open source is, and how open source can be applied to linguistic research and tooling. I mentioned the various issues surrounding funding, digital permanence, ethics, and language development in regard to LRLs. 
+
+I moved on from there to look at the state of open source code, specifically, for low resource languages, looking at the major data repositories online. I've showed a use case involving a specific NLP problem and how open source code could be applied to it. I've looked at Linked Open Data as a solution for sharing linguistic resources, and I've touched on multilingual NLP for developing on LRLs. I've looked at the state of open source code for endangered languages on GitHub, using a novel database I and others have developed to curate crowd-sourced resources. I've looked at how this tool can be used to further LRL research and NLP. 
+
+I've examined two languages in depth, looking at the metrics applied to Scottish Gaelic and Naskapi, exploring their histories of coding and their digital presence. I've used original research I conducted in Kawawachikamach on Naskapi to help inform a new study of their digital presence, today. I've explored ways to further develop their computational and digital potential. From what I presented there, I went on to suggest licenses and repositories for future researchers in the field, and I've suggested novel ways of integrating peer-to-peer databases into language resource dissemination. I've briefly discussed what that means for LRLs, and I've outlined a half-dozen exciting areas of future research that could be undertaken in this area. 
+
+Hopefully, I have been able to impress upon the reader why open source methodologies are preferable to minority language researchers and communities. It is my belief that openness leads to better research and to better language development, and that allowing a language community to digitally ascend will enable speakers to have more opportunities and possibilities in our increasingly digital world. There is always more work to done; my hope is that, through open source licensing, we can approach this work, together.
