--- a/endangered-languages.tex
+++ b/endangered-languages.tex
@@ -185,7 +185,7 @@ Some things can be done, however. Terminologically, 'low-resource' is intentiona
 
 % TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
 
-% Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
+% Alexis: yes, in fact I think it is rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it is a very interesting question)
 
 
 \subsection{Digital presence}
