Add names to ack, dates sites accessed

--- a/thesis.tex
+++ b/thesis.tex
@@ -102,11 +102,13 @@
 \thispagestyle{empty}
 \noindent\subsection*{Acknowledgements}
 
-\noindent This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
+This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX, used in this paper. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; Matthew Bauer, Graham Leary and Francesca Shaw for discussions on Gaelic; Oksana Choulik, Alice Reed, and Caitlin, Matthew and Hazel Windsor, for many conversations in Schefferville and Kawawachikamach; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
 
-\noindent This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper[bot] (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
+This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper[bot] (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
 
-Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/. Last accessed April~, 2018.}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/}}, among a suite of other tools.
+Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/. Last accessed May~1, 2018.}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/. Last accessed May~1, 2018.}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/. Last accessed May~1, 2018.}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/. Last accessed May~1, 2018.}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/. Last accessed May~1, 2018.}}; Bash\footnote{\href{https://www.gnu.org/software/bash/}{https://www.gnu.org/software/bash/. Last accessed May~1, 2018.}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/. Last accessed May~1, 2018.}}; among a suite of other closed and open source tools.
+
+Where it was more efficient to refer to a website as a footnote, I have done so; some of the resources thus acknowledged may have a publication that I also could have referred to. I have had to date no proofreaders for this paper, so all errors are mine and mine alone. My apologies.
 
 \newpage
 
