Use apalike-refs to add urls, add \last cmd

--- a/thesis.tex
+++ b/thesis.tex
@@ -7,7 +7,6 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage{thesiscommands}
 
-
 % IGT
 % Important; include last
 \usepackage{gb4e}
@@ -190,7 +189,7 @@ Where it was more efficient to refer to a website as a footnote, I have done so;
 
 % TODO Add a conflicts section?
 
-\bibliographystyle{apalike}
+\bibliographystyle{apalike-refs}
 \bibliography{references}
 
 \end{document}
