--- a/thesiscommands.sty
+++ b/thesiscommands.sty
@@ -83,7 +83,7 @@
 
 % Sophisticated citation.
 % Check out: http://merkel.zoneo.net/Latex/natbib.php
-\usepackage{natbib}
+\usepackage{natbib, doi}
 
 \usepackage{caption}
 
@@ -188,7 +188,7 @@
 \newcommand{\fref}[1]{Figure~\ref{fig:#1}} % figures
 \newcommand{\sref}[1]{Sec.~\ref{sec:#1}} %sections
 \newcommand{\commentfn}[2]{\footnote{\textbf{#1}: #2}}
-\newcommand{\jpfn}[1]{\commentfn{Jonathan}{#1}}
+\newcommand{\last}[1]{Last accessed #1, 2018.}
 
 % to scale small caps such that numbers are also small (seems not to work with textsc
 \usepackage{scalefnt}
