Clean refs for urls

--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,10 @@
 % This is how you cite websites
 @misc{ethnologuewebsite,
   title={Language status | {Ethnologue}},
-  howpublished={https://www.ethnologue.com/about/language-status},
+  url={https://www.ethnologue.com/about/language-status},
   year={2018},
   author={Lewis, M Paul and Simons, Gary F and Fennig, Charles D and others},
-  note={Last accessed on April~24, 2018.}
+  note={Last accessed April~24, 2018.}
 }
 
 @article{richards2004syntax,
@@ -125,6 +125,8 @@
   volume    = {abs/1507.01715},
   year      = {2015},
   url       = {http://arxiv.org/abs/1507.01715},
+  note      = {Last accessed May~1, 2018},
+  doi       = {10.5334/jors.85},
   archivePrefix = {arXiv},
   eprint    = {1507.01715},
   timestamp = {Wed, 07 Jun 2017 14:40:14 +0200},
@@ -211,15 +213,18 @@
 @article{simons2001olac,
   title={OLAC Protocol for Metadata Harvesting},
   author={Simons, G and Bird, S},
-  journal={Open Language Archives Community. Available at http://www. languagearchives. org/OLAC/protocol. html},
+  journal={Open Language Archives Community},
+  url={http://www.languagearchives.org/OLAC/protocol.html},
+  note={Last accessed May~1, 2018},
   year={2001}
 }
 
 
-@article{dublin1998dublin,
+@misc{dublin1998dublin,
   title={Dublin {Core} metadata element set, version 1.1: Reference description},
   author={Dublin Core Metadata Initiative and others},
-  journal={http://dublincore. org/documents/dces/},
+  url={http://dublincore.org/documents/dces/},
+  note={Last accessed May~1, 2018},
   year={1998}
 }
 
@@ -237,7 +242,8 @@ publisher={Blackwell}
   year={2009},
   address={London},
   publisher={SOAS, Endangered Languages Archive},
-  note={http://elar.soas.ac.uk/deposit/0056. Last accessed on April 26, 2018.}
+  url={http://elar.soas.ac.uk/deposit/0056},
+  note={Last accessed on April 26, 2018.}
 }
 
 @article{caballero2017choguita,
@@ -413,10 +419,11 @@ publisher={Blackwell}
  year={2014}
 }
 
-@article{fitzjohn2014reproducible,
+@misc{fitzjohn2014reproducible,
   title={Reproducible research is still a challenge},
   author={FitzJohn, Rich and Pennell, Matt and Zanne, Amy and Cornwell, Will},
-  journal={http://ropensci.org/blog/2014/06/09/reproducibility},
+  url={http://ropensci.org/blog/2014/06/09/reproducibility},
+  note={Last accessed May~1, 2018},
   year={2014}
 }
 
@@ -428,8 +435,8 @@ publisher={Blackwell}
                   Data Citation and Attribution in Linguistics Group}
                   and {the Linguistics Data Interest Group}},
   year =  2017,
-  note =  {Draft, Version 0.1},
-  url =   {http://site.uit.no/linguisticsdatacitation/austinprinciples}
+  url  =   {http://site.uit.no/linguisticsdatacitation/austinprinciples},
+  note = {Draft, Version 0.1. Last accessed May~1, 2018}
 }
 
 @inproceedings{calzolari2012lre,
@@ -522,7 +529,8 @@ publisher={Blackwell}
   author={Miller, Mark and Aean, Tirea and Tuiq and Littauer, Richard},
   year={2018},
   publisher={learnnavi.org},
-  url={http://eanaeltu.learnnavi.org/dicts/NaviDictionary.pdf}
+  url={http://eanaeltu.learnnavi.org/dicts/NaviDictionary.pdf},
+  note={Last accessed May~1, 2018}
 }
 
 @book{wmannis,
@@ -530,7 +538,8 @@ publisher={Blackwell}
   author={William S. Annis},
   year={2018},
   publisher={learnnavi.org},
-  url={https://files.learnnavi.org/docs/horen-lenavi.pdf}
+  url={https://files.learnnavi.org/docs/horen-lenavi.pdf},
+  note= {Last accessed May~1, 2018}
 }
 
 @article{shah2006motivation,
@@ -697,7 +706,8 @@ publisher={Blackwell}
   pages={27--32},
   series={NEALT Proceedings Series},
   year={2009},
-  doi={http://hdl.handle.net/10062/9670}
+  url={http://hdl.handle.net/10062/9670},
+  note={Last accessed May~1, 2018},
 }
 
 @article{streiter2006implementing,
@@ -708,7 +718,8 @@ publisher={Blackwell}
   number={4},
   pages={267--289},
   year={2006},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/s10590-007-9026-x}
 }
 
 @article{farrar2007gold,
@@ -744,17 +755,15 @@ publisher={Blackwell}
 
 // Note: This is the reviw of ginsburgh2011many
 @article{doi:10.1080/10848770.2013.804729,
-author = {Pym, Anthony},
-title = {How Many Languages Do We Need? The Economics of Linguistic Diversity},
-journal = {The European Legacy},
-volume = {18},
-number = {5},
-pages = {672-673},
-year  = {2013},
-publisher = {Routledge},
-doi = {10.1080/10848770.2013.804729},
-URL = {https://doi.org/10.1080/10848770.2013.804729},
-eprint = {https://doi.org/10.1080/10848770.2013.804729}
+  author = {Pym, Anthony},
+  title = {How Many Languages Do We Need? The Economics of Linguistic Diversity},
+  journal = {The European Legacy},
+  volume = {18},
+  number = {5},
+  pages = {672-673},
+  year  = {2013},
+  publisher = {Routledge},
+  doi = {10.1080/10848770.2013.804729}
 }
 
 @article{gibson2016assessing,
@@ -864,8 +873,8 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   title={{UNESCO} Atlas of the World's Languages in Danger},
   author={UNESCO, Atlas},
   year={2014},
-  note={Last accessed October~19, 2014.},
-  howpublished={http://www.unesco.org/culture/languages-atlas/}
+  note={Last accessed May~1, 2018},
+  url={http://www.unesco.org/languages-atlas/}
 }
 
 @book{lewis2009ethnologue,
@@ -954,7 +963,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   year={2016},
   title={Annotated Reference Corpus of {Scottish Gaelic} ({ARCOSG}), 1997-2016 [dataset]},
   publisher={University of {Edinburgh}. {School of Literatures, Languages and Cultures. Celtic and Scottish Studies}},
-  doi={http://dx.doi.org/10.7488/ds/1411}
+  doi={10.7488/ds/1411}
 }
 
 @article{bourhis2001reversing,
@@ -1025,7 +1034,8 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 title = {Directory International cooperation programs for the protection and promotion of languages and linguistic diversity},
   author = {UNESCO},
   year = {2011},
-  note={Accessible at \href{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}}
+  url= {http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf},
+  note={Last accessed May~1, 2018}
 }
 
 @article{brenzinger2003language,
@@ -1156,7 +1166,6 @@ title = {Directory International cooperation programs for the protection and pro
  author={Snyder, G.},
  isbn={9781593760168},
  lccn={2003019878},
- url={https://books.google.ca/books?id=Q-Gtg8S529AC},
  year={2004},
  publisher={Shoemaker \& Hoard}
 }
@@ -1202,7 +1211,6 @@ title = {Directory International cooperation programs for the protection and pro
  title={Ishi: Last of His Tribe},
  author={Kroeber, T. and Robbins, R.},
  isbn={9780808588153},
- url={https://books.google.ca/books?id=hO9mAAAACAAJ},
  year={1973},
  publisher={Turtleback Books}
 }
@@ -1586,8 +1594,8 @@ title = {Directory International cooperation programs for the protection and pro
   author={Spice, B.},
   year={2012},
   title={{Carnegie Mellon} releases data on {Haitian Creole} to hasten development of translation tools},
-  howpublished={\href{http://www.eurekalert.org/pub_releases/2010-01/cmu-cmr012710.php}{http://www.eurekalert.org/pub\_releases/2010-01/cmu-cmr012710.php}},
-  note={Last accessed August~27, 2012}
+  url={https://www.eurekalert.org/pub_releases/2010-01/cmu-cmr012710.php},
+  note={Last accessed May~1, 2018}
 }
 
 @book{phoible,
@@ -1596,6 +1604,7 @@ title = {Directory International cooperation programs for the protection and pro
   publisher = {Max Planck Institute for Evolutionary Anthropology},
   title     = {PHOIBLE Online},
   url       = {http://phoible.org/},
+  note      = {Last accessed May~1, 2018},
   year      = {2014}
 }
 
@@ -1688,7 +1697,8 @@ title = {Directory International cooperation programs for the protection and pro
  location = {Edinburgh, Scotland},
  pages = {501--511},
  numpages = {11},
- url = {\href{http://dl.acm.org/citation.cfm?id=2132960.2133030}{http://dl.acm.org/citation.cfm?id=2132960.2133030}},
+ url = {http://dl.acm.org/citation.cfm?id=2132960.2133030},
+ note      = {Last accessed May~1, 2018},
  acmid = {2133030},
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
@@ -1721,14 +1731,15 @@ title = {Directory International cooperation programs for the protection and pro
   publisher = {Max Planck Institute for Evolutionary Anthropology},
   title     = {{WALS} Online},
   url       = {http://wals.info/},
+  note      = {Last accessed May~1, 2018},
   year      = {2013}
 }
 
 @misc{ager2008omniglot,
   title={Omniglot writing systems and languages of the world},
   author={Ager, Simon},
-  howpublished={http://omniglot.com},
-  note={Last accessed April~17, 2018]},
+  url={http://omniglot.com},
+  note={Last accessed May~1, 2018},
   year={2018}
 }
 
@@ -1737,7 +1748,7 @@ title = {Directory International cooperation programs for the protection and pro
   author ={Wikipedia contributors},
   title ={Wikipedia --- {W}ikipedia{,} The Free Encyclopedia},
   year = "2018",
-  howpublished = "https://en.wikipedia.org/wiki/Wikipedia",
+  url = {https://en.wikipedia.org/wiki/Wikipedia},
   note = "Last accessed April~17, 2018"
 }
 
@@ -1745,7 +1756,9 @@ title = {Directory International cooperation programs for the protection and pro
 @article{hammarstrom2015glottolog,
   title={Glottolog 2.3},
   author={Hammarstr{\"o}m, Harald and Forkel, Robert and Haspelmath, Martin and Bank, Sebastian},
-  journal={Leipzig: Max Planck Institute for Evolutionary Anthropology. Available online at http://glottolog.org},
+  journal={Leipzig: Max Planck Institute for Evolutionary Anthropology},
+  url={http://glottolog.org},
+  note = {Last accessed May~1, 2018},
   year={2015}
 }
 
@@ -1765,6 +1778,7 @@ title = {Directory International cooperation programs for the protection and pro
  publisher = {Max Planck Institute for Evolutionary Anthropology},
  chapter = 141,
  url    = {http://wals.info/chapter/141},
+ note={Last accessed May~1, 2018},
  year   = {2013},
  book   = "wals"
 }
@@ -1818,21 +1832,22 @@ title = {Directory International cooperation programs for the protection and pro
 }
 
 @inproceedings{storey2014,
- author = {Storey, Margaret-Anne and Singer, Leif and Cleary, Brendan and Figueira Filho, Fernando and Zagalsky, Alexey},
- title = {The ({R}) Evolution of Social Media in Software Engineering},
- booktitle = {Proceedings of the on Future of Software Engineering},
- series = {FOSE 2014},
- year = {2014},
- isbn = {978-1-4503-2865-4},
- location = {Hyderabad, India},
- pages = {100--116},
- numpages = {17},
- url = {http://doi.acm.org/10.1145/2593882.2593887},
- doi = {10.1145/2593882.2593887},
- acmid = {2593887},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {Collaboration, Social Media, Software Engineering},
+author = {Storey, Margaret-Anne and Singer, Leif and Cleary, Brendan and Figueira Filho, Fernando and Zagalsky, Alexey},
+title = {The ({R}) Evolution of Social Media in Software Engineering},
+booktitle = {Proceedings of the on Future of Software Engineering},
+series = {FOSE 2014},
+year = {2014},
+isbn = {978-1-4503-2865-4},
+location = {Hyderabad, India},
+pages = {100--116},
+numpages = {17},
+url = {http://doi.acm.org/10.1145/2593882.2593887},
+note={Last accessed May~1, 2018},
+doi = {10.1145/2593882.2593887},
+acmid = {2593887},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {Collaboration, Social Media, Software Engineering},
 }
 
 @book{MacKenzie-and-Jancewicz-1994,
@@ -1850,7 +1865,6 @@ title = {Directory International cooperation programs for the protection and pro
  title={Towards a Dialectology of {Cree-Montagnais-Naskapi}},
  author={MacKenzie, M.E.},
  publisher={University of Toronto},
- url={https://books.google.ca/books?id=u\_MBPwAACAAJ},
  year={1980}
 }
 
@@ -1870,7 +1884,6 @@ title = {Directory International cooperation programs for the protection and pro
  isbn={9781349950195},
  lccn={2017935967},
  series={Palgrave Studies in Oral History},
- url={https://books.google.ca/books?id=SGuYDgAAQBAJ},
  year={2017},
  publisher={Palgrave Macmillan US}
 }
@@ -1881,5 +1894,6 @@ title = {Directory International cooperation programs for the protection and pro
  year={2007},
  isbn={978-0-88843-557-8},
  url={http://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
+ note={Last accessed May~1, 2018},
  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
 }
